blog/k8s/prod/blue/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment-blue
  namespace: prod
  labels:
    app: comments
    color: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
      color: blue
  template:
    metadata:
      labels:
        app: comments
        color: blue
    spec:
      containers:
        - name: comments
          image: 293337163121.dkr.ecr.us-east-1.amazonaws.com/comments:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
