blog/k8s/prod/blue/event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment-blue
  namespace: prod
  labels:
    app: event-bus
    color: blue

spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
      color: blue
  template:
    metadata:
      labels:
        app: event-bus
        color: blue
    spec:
      containers:
        - name: event-bus
          image: 293337163121.dkr.ecr.us-east-1.amazonaws.com/event-bus:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4005
