blog/k8s/prod/blue/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment-blue
  namespace: prod
  labels:
    app: posts
    color: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
      color: blue
  template:
    metadata:
      labels:
        app: posts
        color: blue
    spec:
      containers:
        - name: posts
          image: 293337163121.dkr.ecr.us-east-1.amazonaws.com/posts:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
