blog/k8s/prod/blue/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment-blue
  namespace: prod
  labels:
    app: query
    color: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
      color: blue
  template:
    metadata:
      labels:
        app: query
        color: blue
    spec:
      containers:
        - name: query
          image: 293337163121.dkr.ecr.us-east-1.amazonaws.com/query:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4002
