blog/k8s/prod/blue/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service-blue
  namespace: prod
spec:
  selector:
    app: client
    color: blue
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
