blog/k8s/prod/blue/comments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-svc-blue
  namespace: prod
spec:
  selector:
    app: comments
    color: blue
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  type: ClusterIP
