blog/k8s/prod/blue/event-bus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-svc
  namespace: prod
spec:
  selector:
    app: event-bus
    color: blue
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
  type: ClusterIP
