blog/k8s/prod/blue/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-svc-blue
  namespace: prod
spec:
  selector:
    app: posts
    color: blue
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
