blog/k8s/prod/blue/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-svc
  namespace: prod-blue
spec:
  selector:
    app: query
    color: blue
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP
