blog/k8s/prod/blue/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: prod.myapp.local
      http:
        paths:
          - path: /posts(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: posts-svc-blue
                port:
                  number: 4000
          - path: /comments(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: comments-svc-blue
                port:
                  number: 4001
          - path: /query(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: query-svc-blue
                port:
                  number: 4002
